--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     ></script>
 
     <!--JavaScript for adding a nes Block  -->
-    <script src="./Blocks/0001_G_block.js"></script>
+    <script src="./0001_G_block.js"></script>
    
     
 
